# e727-local-ai

./: .env  .env.example  .gitignore  ALPINE.md  BLOG.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HARDWARE.md  LICENSE  README.md  WINDOWS.md  docker-compose.yml  install.sh  llm-chooser.sh  pyproject.toml  test-model.sh
.github/workflows/: ci.yml  main.yml
dashboard/: index.html
deploy/: primaclaw-coordinator.service  primaclaw-dashboard.service  primaclaw-worker.service
src/: __init__.py  benchmark.py  config.py  coordinator.py  llm_autochooser.py  model_pool.py  model_suggester.py  worker.py
src/efficiency/: __init__.py  cli.py
src/nemoclaw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tutor/: __init__.py  cli.py
tests/: test_coordinator.py
